[B][COLOR gold]v4.00.xx[/COLOR][/B]
- Switched to TMDb API for TV Shows metadata
    [I]Note:[/I]  This is a big change - large parts of the code have been re-written
    and many other parts (some obvious some not) have been touched.
    Please report any issues at: [I]https://github.com/host505/plugin.video.theoath/issues[/I]
    Thanks to all the testers involved with this release.

[B][COLOR gold]v3.6.001[/COLOR][/B]
- Fixed issue with size filtering

[B][COLOR gold]v3.6.000[/COLOR][/B]
- Description update
- Stop attempting to scrobble when playback fails to start
- Minor source fetching function tweaks

[B][COLOR gold]v3.5.007[/COLOR][/B]
- Removed Openscrapers support
    Causes unsolvable installation issue in the case of Kodi 18 to 19 upgrade
    and openscrapers was already installed.

[B][COLOR gold]v3.5.005-6[/COLOR][/B]
- Minor fixes

[B][COLOR gold]v3.5.004[/COLOR][/B]
- Attempt to fix error when upgrade Kodi 18 to 19 has occured and
    openscrapers package was already installed
    NOTE: Openscrapers is not Kodi 19 compatible so can't be used.
    If you have it, uninstall from Add-ons/My add-ons/Program add-ons.

[B][COLOR gold]v3.5.003[/COLOR][/B]
- Applied extra artwork to the player
- Fixed resume from local resume points (again)

[B][COLOR gold]v3.5.002[/COLOR][/B]
- Fix local resume points prompting to resume from <120 secs offset
- Library database fixes
- Attempt to speedup directory source list appearance a bit

[B][COLOR gold]v3.5.001[/COLOR][/B]
- Fix playback not starting on local resume point

[B][COLOR gold]v3.5.000[/COLOR][/B]
- Removed MetaHandler dependency. Local indicators are now handled internaly.
    [I]NOTE:[/I] Unfortunately, due to this, all [I]local[/I] watched statuses and resume
    points will reset. This was necessary for several reasons:
    Metahandler was doing unnecessary API calls, fetching information we already had -
    it was actually not needed, a leftover from Genesis days.