@@ -1,3 +1,8 @@
+[B][COLOR gold]v4.00.03[/COLOR][/B]
+- Withdraw uncached torrents from autoplay
+- Fixed issue where local (translated) TV show title would pass for scraping
+- Code cleanup
+
 [B][COLOR gold]v4.00.xx[/COLOR][/B]
 - Switched to TMDb API for TV Shows metadata
     [I]Note:[/I]  This is a big change - large parts of the code have been re-written
